Fix python code/imports in qsc course
Signed-off-by: Nigel Jones <jonesn@uk.ibm.com>

--- a/learning/courses/quantum-safe-cryptography/symmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/symmetric-key-cryptography.ipynb
@@ -102,13 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "06552f57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cryptography in /Users/jonesn/src/qiskit-documentation/.venv/lib/python3.13/site-packages (45.0.4)\n",
+      "Requirement already satisfied: secretpy in /Users/jonesn/src/qiskit-documentation/.venv/lib/python3.13/site-packages (0.12.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in /Users/jonesn/src/qiskit-documentation/.venv/lib/python3.13/site-packages (from cryptography) (1.17.1)\n",
+      "Requirement already satisfied: pycparser in /Users/jonesn/src/qiskit-documentation/.venv/lib/python3.13/site-packages (from cffi>=1.14->cryptography) (2.22)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Given plaintext: this is a strict top secret message for intended recipients only\n"
+     ]
+    }
+   ],
    "source": [
     "# Install the library if needed\n",
-    "# %pip install secretpy\n",
+    "%pip install cryptography secretpy\n",
     "\n",
     "# import the required crypto functions which will be demonstrated later\n",
     "from secretpy import Caesar\n",
@@ -157,10 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ecaf0d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Caesar shift secret key: 5\n",
+      "alphabet: ('a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', ' ')\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize the required python object for doing Caesar shift encryption\n",
     "caesar_cipher = Caesar()\n",
@@ -213,10 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "af9f3eb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encrypted caeser shift ciphertext: ymnxenxefexywnhyeytuexjhwjyerjxxfljektwensyjsijiewjhnunjsyxetsqc\n"
+     ]
+    }
+   ],
    "source": [
     "caeser_ciphertext = caesar_cipher.encrypt(plaintext, caesar_key, alphabet)\n",
     "print(f\"Encrypted caeser shift ciphertext: {caeser_ciphertext}\")"
@@ -233,10 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "da614545",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decrypted caeser shift plaintext: this is a strict top secret message for intended recipients only\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "caeser_plaintext = caesar_cipher.decrypt(caeser_ciphertext, caesar_key, alphabet)\n",
     "print(f\"Decrypted caeser shift plaintext: {caeser_plaintext}\\n\")"
@@ -257,10 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a7d8af57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AES secret key: mxwarzxrgpjwefye\n"
+     ]
+    }
+   ],
    "source": [
     "# lamba defines an inline function in this case that takes two values a,b with the resulting expression of a+b\n",
     "# reduce uses a two-argument function(above), and applies this to all the entries in the list (random alphabet characters) cumulatively\n",
@@ -284,10 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d2e4df17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AES initialization vector: kneobtbtbujbmly \n"
+     ]
+    }
+   ],
    "source": [
     "aes_initialization_vector = reduce(\n",
     "    lambda a, b: a + b, [np.random.choice(alphabet) for i in range(16)]\n",
@@ -308,10 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fa477669",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encrypted AES ciphertext: b'5$\\x1e\\xd4+\\xb8O\\xe9jc\\xa2\\xdcD\\x94\\xa6\\x08\\x92y\\xfe\\xb4\\x13g#\\xf0!*\\x18\\x9c<[\\xaa\\x88cz\\xea\\xf0^\\x1d\\x05\\xdf\\x81}+\\x83[q\\x92\\xcfm\\xf61\\xc5c\\xf0q\\xf1\\x87A4@\\xcd\\xeb\\x1a\\xa5'\n"
+     ]
+    }
+   ],
    "source": [
     "# The encryptor is setup using the key & CBC. In both cases we need to convert the string (utf-8) into bytes\n",
     "sender_aes_cipher = Cipher(\n",
@@ -340,10 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "10571495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decrypted AES plaintext: this is a strict top secret message for intended recipients only\n"
+     ]
+    }
+   ],
    "source": [
     "# Similar setup of AES to what we did for encryption, but this time, for decryption\n",
     "receiver_aes_cipher = Cipher(\n",
@@ -743,7 +815,7 @@
  "metadata": {
   "description": "In this lesson we will look at symmetric key cryptography which secures much of the data at rest and in transit by virtue of its efficiency.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -757,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.13.5"
   },
   "title": "Symmetric key cryptography",
   "widgets": {
