--- a/learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb
+++ b/learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb
@@ -406,7 +406,7 @@
  "metadata": {
   "description": "In this lesson we will look at cryptographic hash functions which see extensive use in quick validation and authentication.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.13.5"
   },
   "title": "Cryptographic hash functions",
   "widgets": {
