--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -444,7 +444,7 @@ To get started, explore the [Qiskit Functions documentation.](/docs/guides/funct
 
 - With the launch of the Qiskit Functions Catalog, Premium Plan developers can explore the IBM Circuit function. The IBM Circuit function includes the latest AI-powered extensions to Qiskit for circuit synthesis, optimization, and scheduling, as well as advanced error mitigation methods to return the most accurate estimations possible with today's hardware.
 
-  Users can purchase licenses for the following functions contributed by our partners at Q-CTRL, QEDMA, Algorithmiq, and Qunasys.
+  Users can purchase licenses for the following functions contributed by our partners at Q-CTRL, QEDMA, and Algorithmiq.
 
 - **Circuit functions**
 
@@ -454,7 +454,6 @@ To get started, explore the [Qiskit Functions documentation.](/docs/guides/funct
 
 - **Application functions**
 
-  - QunaSys is releasing a chemistry application function comprising three algorithms meant to solve the ground state energy estimation (GSEE) problem.
   - Q-CTRL is releasing an optimization solver with which users can pass a graph or an objective, and receive solution costs.
 </details>
 
@@ -504,7 +503,6 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
   <CloudContent>
   - Guidance to [securely manage your API key](/docs/guides/cloud-setup)
   </CloudContent>
-  - Revisions by Qunasys to the Qiskit Functions [QURI Chemistry](/docs/guides/qunasys-quri-chemistry) guide
 
   - Updated code examples to fix a bug in [Get started with primitives](/docs/guides/get-started-with-primitives)
 
