updated kernel methods to qiskit 2.1

--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "27f62452-2534-4f97-a738-52e4a19a7772",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# Get the least busy backend\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=fm.num_qubits\n",
     ")\n",
@@ -649,7 +649,7 @@
     "from qiskit.primitives import StatevectorSampler\n",
     "\n",
     "# Remember to insert your token in the QiskitRuntimeService constructor to use real quantum computers\n",
-    "# service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "# service = QiskitRuntimeService()\n",
     "# backend = service.least_busy(\n",
     "#    operational=True, simulator=False, min_num_qubits=fm.num_qubits\n",
     "# )\n",
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "99e3a8c7-9aba-4890-a492-cb3779b5de03",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# Get the least busy backend\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=fm.num_qubits\n",
     ")\n",
