Remove a Qiskit function (#3472)
Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -72,8 +72,12 @@ As the field moves from bespoke circuit construction to utility-scale workflows,
   * [Port code to Qiskit Serverless](./serverless-port-code)
 
 - [Qiskit Functions](/docs/guides/functions)
+  * [Kipu Quantum Iskay Quantum Optimizer](/docs/guides/kipu-optimization)
+  * [Multiverse Computing Singularity](/docs/guides/multiverse-computing-singularity)
   * [Q-CTRL Optimization Solver](/docs/guides/q-ctrl-optimization-solver)
-  * [QunaSys QURI Chemistry](/docs/guides/qunasys-quri-chemistry)
+  * [Quantum Portfolio Optimizer: A Qiskit Function by Global Data Quantum](/docs/guides/global-data-quantum-optimizer)
+  * [QUICK-PDE: A Qiskit Function by ColibriTD](/docs/guides/colibritd-pde)
+  * [Qunova Computing HI-VQE Chemistry](/docs/guides/qunova-chemistry)
 
 ## Next steps
 
