--- a/learning/courses/quantum-machine-learning/introduction.ipynb
+++ b/learning/courses/quantum-machine-learning/introduction.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "# Import some qiskit packages required for setting up our quantum circuits.\n",
     "from qiskit.circuit import Parameter, ParameterVector, QuantumCircuit\n",
-    "from qiskit.circuit.library import UnitaryOverlap\n",
+    "from qiskit.circuit.library import unitary_overlap\n",
     "\n",
     "# Import StatevectorSampler as our sampler.\n",
     "from qiskit.primitives import StatevectorSampler\n",
@@ -291,7 +291,7 @@
     "unitary2 = fm.assign_parameters(list(X_train[x2]) + [np.pi / 2])\n",
     "\n",
     "# Create the overlap circuit\n",
-    "overlap_circ = UnitaryOverlap(unitary1, unitary2)\n",
+    "overlap_circ = unitary_overlap(unitary1, unitary2)\n",
     "overlap_circ.measure_all()\n",
     "overlap_circ.draw(\"mpl\", scale=0.6, style=\"iqp\")\n",
     "\n",
