--- a/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f2228937",
    "metadata": {},
    "outputs": [
@@ -617,10 +617,10 @@
     "from math import pi\n",
     "import itertools\n",
     "from qiskit.circuit import QuantumCircuit\n",
-    "from qiskit.circuit.library import ExcitationPreserving\n",
+    "from qiskit.circuit.library import excitation_preserving\n",
     "\n",
     "circuit = QuantumCircuit(4, name=\"Example circuit\")\n",
-    "circuit.append(ExcitationPreserving(4, reps=1, flatten=True), range(4))\n",
+    "circuit.append(excitation_preserving(4, reps=1, flatten=True), range(4))\n",
     "circuit.measure_all()\n",
     "\n",
     "value_cycle = itertools.cycle([0, pi / 4, pi / 2, 3 * pi / 4, pi, 2 * pi])\n",
@@ -1177,7 +1177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.backend(\"ibm_sherbrooke\")\n",
     "sampler = Sampler(backend)"
    ]
@@ -1260,7 +1260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")"
+    "service = QiskitRuntimeService()"
    ]
   },
   {
