Updated all variational alg design to qiskit 2.1

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -674,7 +674,7 @@
     "\n",
     "# Select the least busy backend:\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, min_num_qubits=ansatz.num_qubits, simulator=False\n",
     ")\n",
