--- a/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb
+++ b/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb
@@ -273,14 +273,14 @@
    "id": "65d39e58-e54b-4ea3-95bf-ee68d9b89832",
    "metadata": {},
    "source": [
-    "### EfficientSU2\n",
+    "### Efficient SU2\n",
     "\n",
-    "[`EfficientSU2`](/docs/api/qiskit/qiskit.circuit.library.EfficientSU2) is a hardware-efficient circuit that consists of layers of single-qubit operations spanning SU(2) and `CX` entanglements. This is a heuristic pattern that can be used to prepare trial wave functions for variational quantum algorithms or as a classification circuit for machine learning."
+    "[`efficient_su2`](/docs/api/qiskit/qiskit.circuit.library.EfficientSU2) is a hardware-efficient circuit that consists of layers of single-qubit operations spanning SU(2) and `CX` entanglements. This is a heuristic pattern that can be used to prepare trial wave functions for variational quantum algorithms or as a classification circuit for machine learning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5abc6f15-d7f5-466a-9659-78a11a2c5270",
    "metadata": {},
    "outputs": [
@@ -296,9 +296,9 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
-    "ansatz = EfficientSU2(4, su2_gates=[\"rx\", \"y\"], entanglement=\"linear\", reps=1)\n",
+    "ansatz = efficient_su2(4, su2_gates=[\"rx\", \"y\"], entanglement=\"linear\", reps=1)\n",
     "ansatz.decompose().draw(\"mpl\")"
    ]
   },
@@ -437,12 +437,12 @@
     "\n",
     "In machine learning, a common application is the classification of data into two or more categories. This involves encoding a datapoint into a feature map that maps classical feature vectors into the quantum Hilbert space. Constructing quantum feature maps based on parameterized quantum circuits that are hard to simulate classically is an important step towards obtaining a potential advantage over classical machine learning approaches and is an active area of current research.\n",
     "\n",
-    "The ZZFeatureMap can be used to create a parameterized circuit. We can pass in our data points to the feature map ($x$) and a separate variational form to pass in weights as parameters ($\\theta$)."
+    "The `zz_feature_map` can be used to create a parameterized circuit. We can pass in our data points to the feature map ($x$) and a separate variational form to pass in weights as parameters ($\\theta$)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9d3a813b-40cf-4399-b912-714893987c30",
    "metadata": {},
    "outputs": [
@@ -458,11 +458,11 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import ZZFeatureMap, TwoLocal\n",
+    "from qiskit.circuit.library import zz_feature_map, TwoLocal\n",
     "\n",
     "data = [0.1, 0.2]\n",
     "\n",
-    "zz_feature_map_reference = ZZFeatureMap(feature_dimension=2, reps=2)\n",
+    "zz_feature_map_reference = zz_feature_map(feature_dimension=2, reps=2)\n",
     "zz_feature_map_reference = zz_feature_map_reference.assign_parameters(data)\n",
     "\n",
     "variation_form = TwoLocal(2, [\"ry\", \"rz\"], \"cz\", reps=2)\n",
