--- a/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
+++ b/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
@@ -1301,7 +1301,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "# Or use a specific backend\n",
     "# backend = service.backend(\"ibm_cusco\")\n",
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "de006d72-db04-49d4-806b-89bd1e5b9947",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1439,7 @@
    ],
    "source": [
     "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
     "H2_op = SparsePauliOp.from_list(\n",
     "    [\n",
@@ -1451,7 +1451,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "chem_ansatz = EfficientSU2(H2_op.num_qubits)\n",
+    "chem_ansatz = efficient_su2(H2_op.num_qubits)\n",
     "\n",
     "chem_ansatz.decompose().draw(\"mpl\")"
    ]
@@ -1728,7 +1728,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)"
    ]
   },
