--- a/learning/courses/variational-algorithm-design/reference-states.ipynb
+++ b/learning/courses/variational-algorithm-design/reference-states.ipynb
@@ -172,12 +172,12 @@
    "source": [
     "### Quantum machine learning\n",
     "\n",
-    "In the context of a variational quantum classifier (VQC), the training data is encoded into a quantum state with a parameterized circuit known as a *feature map*, where each parameter value represents a data point from the training dataset. The ZZFeatureMap is a type of parameterized circuit that can be utilized to pass our data points ($x$) to this feature map."
+    "In the context of a variational quantum classifier (VQC), the training data is encoded into a quantum state with a parameterized circuit known as a *feature map*, where each parameter value represents a data point from the training dataset. The `zz_feature_map` is a type of parameterized circuit that can be utilized to pass our data points ($x$) to this feature map."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4bfd5a76-0db3-499d-bda1-0cb95c3f23c2",
    "metadata": {},
    "outputs": [
@@ -193,11 +193,11 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import ZZFeatureMap\n",
+    "from qiskit.circuit.library import zz_feature_map\n",
     "\n",
     "data = [0.1, 0.2]\n",
     "\n",
-    "zz_feature_map_reference = ZZFeatureMap(feature_dimension=2, reps=2)\n",
+    "zz_feature_map_reference = zz_feature_map(feature_dimension=2, reps=2)\n",
     "zz_feature_map_reference = zz_feature_map_reference.assign_parameters(data)\n",
     "zz_feature_map_reference.decompose().draw(\"mpl\")"
    ]
