Updated all modules to qiskit 2.1

--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -325,7 +325,7 @@
     "# Syntax for first saving your token\n",
     "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
     "# Syntax for specifying a channel and instance (if your organization has one for you.\n",
-    "# service = QiskitRuntimeService(channel='ibm_quantum', instance=\"ibm-q/open/main\")\n",
+    "# service = QiskitRuntimeService(channel='ibm_quantum_platform', instance=\"ibm-q/open/main\")\n",
     "\n",
     "service = QiskitRuntimeService()"
    ]
@@ -1412,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.12"
   },
   "title": "Stern-Gerlach measurements with Qiskit",
   "widgets": {
