--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Syntax for first saving your token\n",
     "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
-    "# service = QiskitRuntimeService(channel='ibm_quantum')\n",
+    "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
     "\n",
     "# Load saved credentials\n",
     "service = QiskitRuntimeService()"
@@ -1372,7 +1372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.12"
   },
   "title": "Exploring uncertainty with Qiskit",
   "widgets": {
