--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "  - There are some limitations of classical feedforward and control flow operations on quantum hardware that might impact your program. For more information, see [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations).\n",
-    "  - Qiskit Runtime does not support all dynamic circuits features that Qiskit supports.  See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.\n",
+    "  - See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.\n",
     "</Admonition>\n",
     "\n",
     "## If statement\n",
