--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d9f56529",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
     "            physical_edge = (layout[edge[0]], layout[edge[1]])\n",
     "            try:\n",
     "                ge = props.gate_error(two_q_gate_name, physical_edge)\n",
-    "            except:\n",
+    "            except Exception:\n",
     "                ge = props.gate_error(two_q_gate_name, physical_edge[::-1])\n",
     "            total_2q_error += ge\n",
     "        total_measurement_error = 0\n",
