jessie review comments

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -31,34 +31,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dynamic circuits are powerful tools that let us measure qubits in the middle of a quantum circuit execution and then perform classical logical operations within the circuit, based on the outcome of those mid-circuit measurements.  This process is also known as _classical feedforward_. While we are still in the early days of understanding how best to take advantage of dynamic circuits, the quantum research community has already identified a number of use cases, such as the following:\n",
+    "\n",
+    "* Efficient quantum state preparation, such as [W-state](https://arxiv.org/pdf/2412.07969) and [MPS state](https://arxiv.org/abs/2404.16083)\n",
+    "* [Efficient long-range entanglement](https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.5.030339) between qubits on the same chip by using shallow circuits\n",
+    "* Efficient [sampling of IQP-like circuits](https://arxiv.org/pdf/2505.04705)\n",
+    "\n",
+    "These improvements brought by dynamic circuits, however, come with trade-offs. Mid-circuit measurements and classical operations typically have longer execution time than two-qubit gates, and this increase in time might negate the benefits of reduced circuit depth. Therefore, reducing the length of mid-circuit measurement is a focus area of improvement as IBM Quantum rolls out the [new version](/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) of dynamic circuits.\n",
+    "\n",
+    "The [OpenQASM3 specification](https://openqasm.com/language/classical.html#looping-and-branching) defines a number of conditional instructions, but Qiskit Runtime currently only supports the [if_test](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#if_test) statement, which can be used as a method on [QuantumCircuit.](/docs/api/qiskit/qiskit.circuit.QuantumCircuit) This methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. This guide describes how to use this conditional statement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0767b203-ad69-428f-b8c1-50ceab758b35",
    "metadata": {},
    "source": [
-    "<Admonition type=\"caution\" title=\"Deprecations to accelerate the new version of dynamic circuits\">\n",
-    "\n",
-    "Starting 2 June 2025 and continuing through the year, IBM Quantum&reg; will begin a gradual rollout of new features to dynamic circuits that will enable them at the utility scale. See the [announcement](/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) for more details.\n",
-    "\n",
-    "As part of the rollout, the following have been removed:\n",
-    "\n",
-    "- The `while`, `for`, and `switch` control flow constructs\n",
-    "- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)\n",
-    "- Conditional measurements\n",
-    "\n",
-    "New QPUs released after this deprecation will not support dynamic circuits until the updated features are released. Additionally, after the release, QPUs with older control electronics will not support dynamic circuits. To check whether a specific QPU supports dynamic circuits, use this code:\n",
-    "\n",
-    "```python\n",
-    "# returns True if backend supports dynamic circuits\n",
-    "\"dynamic_circuits\" in backend.configuration().supported_features\n",
-    "```\n",
-    "</Admonition>\n",
-    "\n",
-    "This guide demonstrates the functionality available in the Qiskit SDK for performing classical feedforward and control flow. These features are sometimes referred to collectively as \"dynamic circuits.\" Classical feedforward refers to the ability to measure qubits in the middle of a circuit and perform additional quantum operations that depend on the measurement outcome. Qiskit supports four control flow constructs for classical feedforward, each implemented as a method on [`QuantumCircuit`](../api/qiskit/qiskit.circuit.QuantumCircuit). The constructs and their corresponding methods are:\n",
-    "\n",
-    "- If statement - [`QuantumCircuit.if_test`](../api/qiskit/qiskit.circuit.QuantumCircuit#if_test)\n",
-    "- If statement - [`QuantumCircuit.if_else`](../api/qiskit/qiskit.circuit.QuantumCircuit#if_else)\n",
-    "\n",
-    "Each of these methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. In the rest of this guide, we will explain each of these constructs and how to use them.\n",
-    "\n",
     "<Admonition type=\"caution\">\n",
     "  - There are some limitations of classical feedforward and control flow operations on quantum hardware that might impact your program. For more information, see [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations).\n",
     "  - See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.\n",
