--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -433,7 +433,7 @@
     "        G_new (PyGraph): The graph with IBM backend compliant zigzag pattern.\n",
     "        num_alpha_beta_qubits (int): Number of connecting qubits between the linear chains\n",
     "            in the zigzag pattern. While we want as many connecting (alpha-beta) qubits between\n",
-    "            the linear (alpha-alpha) chains, we cannot accomodate all due to qubit and connectivity\n",
+    "            the linear (alpha-alpha) chains, we cannot accommodate all due to qubit and connectivity\n",
     "            constraints of backends. This is the maximum number of connecting qubits the zigzag pattern\n",
     "            can have while being backend compliant (i.e., isomorphic to backend coupling graph).\n",
     "    \"\"\"\n",
@@ -465,11 +465,11 @@
     "    physical_layouts: Sequence[int],\n",
     "    two_q_gate_name: str,\n",
     ") -> list[list[list[int], float]]:\n",
-    "    \"\"\"Lighweight and heuristic function to score isomorphic layouts. There can be many zigzag patterns,\n",
+    "    \"\"\"Lightweight and heuristic function to score isomorphic layouts. There can be many zigzag patterns,\n",
     "    each with different set of physical qubits, that can be mapped to a backend. Some of them may\n",
     "    include less noise qubits and couplings than others. This function computes a simple error score\n",
     "    for each such layout. It sums up 2Q gate error for all couplings in the zigzag pattern (layout) and\n",
-    "    meaurement of errors of physical qubits in the layout to compute the error score.\n",
+    "    measurement of errors of physical qubits in the layout to compute the error score.\n",
     "\n",
     "    Note:\n",
     "        This lightweight scoring can be refined using concepts such as mapomatic.\n",
@@ -480,13 +480,13 @@
     "            nodes are numbered from 0 to (2 * num_orbitals + num_alpha_beta_qubits).\n",
     "        physical_layouts (Sequence[int]): All physical layouts of the zigzag pattern that are isomorphic\n",
     "            to each other and to the larger backend coupling map.\n",
-    "        two_q_gate_name (str): The name of the two-qubit gate of the backend. The name is used for fecthing\n",
+    "        two_q_gate_name (str): The name of the two-qubit gate of the backend. The name is used for fetching\n",
     "            two-qubit gate error from backend properties.\n",
     "\n",
     "    Returns:\n",
     "        scores (list): A list of lists where each sublist contains two items. First item is the layout, and\n",
     "            second item is a float representing error score of the layout. The layouts in the `scores` are\n",
-    "            sorted in the ascedning order of error score.\n",
+    "            sorted in the ascending order of error score.\n",
     "    \"\"\"\n",
     "    props = backend.properties()\n",
     "    scores = []\n",
@@ -538,7 +538,7 @@
     "        num_orbitals (int): Number of orbitals.\n",
     "        backend (BackendV2): A backend.\n",
     "        score_layouts (bool): Optional. If `True`, it uses the `lightweight_layout_error_scoring`\n",
-    "            function to score the isomorphic layouts and returns the layout with less errorneous qubits.\n",
+    "            function to score the isomorphic layouts and returns the layout with less erroneous qubits.\n",
     "            If `False`, returns the first isomorphic subgraph.\n",
     "\n",
     "    Returns:\n",
