--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -317,7 +317,7 @@
    "id": "0760b3f3",
    "metadata": {},
    "source": [
-    "Next, we optimize the circuit for a target hardware. Here, we'll use the IBM Sherbrooke QPU. The choice of QPU affects the qubit mapping we use to achieve the \"zig-zag\" pattern described [previously](#local-unitary-cluster-jastrow-lucj-ansatz)."
+    "Next, we optimize the circuit for a target hardware."
    ]
   },
   {
