try to fix element

--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -353,7 +353,7 @@
    "source": [
     "<details>\n",
     "<summary>Code for automated selection of \"zig-zag\" layout</summary>\n",
-    "<CodeCellPlaceholder tag=\\\"id-automated-layout-code\\\" />\n",
+    "<CodeCellPlaceholder tag=\"id-automated-layout-code\" />\n",
     "</details>"
    ]
   },
