fixed ibm_quantum channel

--- a/learning/courses/quantum-chem-with-vqe/geometry.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/geometry.ipynb
@@ -204,19 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "5f8dd8e0-6dfb-4be7-af15-1591f569201c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_24244/3538100010.py:15: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
-      "  service = QiskitRuntimeService(channel=\"ibm_quantum\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# General imports\n",
     "\n",
@@ -232,7 +223,7 @@
     "# Qiskit Runtime tools\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")"
+    "service = QiskitRuntimeService()"
    ]
   },
   {
