--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -323,9 +323,9 @@
     "\n",
     "\n",
     "# Syntax for first saving your token\n",
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
-    "# Syntax for specifying a channel and instance (if your organization has one for you.\n",
-    "# service = QiskitRuntimeService(channel='ibm_quantum_platform', instance=\"ibm-q/open/main\")\n",
+    "# QiskitRuntimeService.save_account(channel=\"<channel name here>\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# Syntax for specifying a channel and instance (if you need to change from the default set above)\n",
+    "# service = QiskitRuntimeService(channel='<channel name here>', instance=\"<your instance name here>\")\n",
     "\n",
     "service = QiskitRuntimeService()"
    ]
@@ -1412,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.12"
   },
   "title": "Stern-Gerlach measurements with Qiskit",
   "widgets": {
