--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -22,8 +22,6 @@ If you are a new user, ignore this guide and start with the [Introduction to Qis
 
 Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes to the new platform on the [Latest updates page,](/docs/guides/latest-updates) which is updated every two weeks.
 
-You can continue to use [IBM Quantum Platform Classic](https://quantum.ibm.com/) until it is sunset on 1 July, 2025.
-
 ## When should I make the transition?
 
 Open and Pay-as-you-go Standard Plan users are encouraged to create an account and start using the new platform as soon as possible.
@@ -64,7 +62,7 @@ The Lite Plan is deprecated and will be removed on 14 March 2025.
 
 ## Current IBM Quantum Platform users
 
-Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), you will now access the [upgraded version of IBM Quantum Platform](https://quantum.cloud.ibm.com/), which is integrated with IBM Cloud.  To use the new platform, users will need to follow these onboarding instructions.
+Instead of accessing IBM Quantum Platform Classic, you will now access the [upgraded version of IBM Quantum Platform](https://quantum.cloud.ibm.com/), which is integrated with IBM Cloud.  To use the new platform, users will need to follow these onboarding instructions.
 
 ### Save results from IBM Quantum Platform Classic
 
