delete code block from docstring

--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -425,24 +425,7 @@
     "            i.e., qubits. Usually, the coupling graph of a IBM backend is directed (e.g., Eagle devices\n",
     "            such as ibm_sherbrooke) or may have two edges between two nodes (e.g., Heron `ibm_torino`).\n",
     "            A user needs to be make such graphs undirected and/or remove duplicate edges to make them\n",
-    "            compatible with this function. One way to do this is as follows:\n",
-    "            ```\n",
-    "            graph = backend.coupling_map.graph\n",
-    "            if not graph.is_symmetric():\n",
-    "                graph.make_symmetric()\n",
-    "            backend_coupling_graph = graph.to_undirected()\n",
-    "\n",
-    "            edge_list = backend_coupling_graph.edge_list()\n",
-    "            removed_edge = []\n",
-    "            for edge in edge_list:\n",
-    "                if set(edge) in removed_edge:\n",
-    "                    continue\n",
-    "                try:\n",
-    "                    backend_coupling_graph.remove_edge(edge[0], edge[1])\n",
-    "                    removed_edge.append(set(edge))\n",
-    "                except NoEdgeBetweenNodes:\n",
-    "                    pass\n",
-    "            ```\n",
+    "            compatible with this function.\n",
     "\n",
     "    Returns:\n",
     "        G_new (PyGraph): The graph with IBM backend compliant zigzag pattern.\n",
