--- a/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
+++ b/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
@@ -30,9 +30,9 @@
    "source": [
     "## Background\n",
     "\n",
-    "This tutorial demonstrates how to solve a higher-order binary optimization (HOBO) problem using the [Optimization Solver, a Qiskit Function by Q-CTRL Fire Opal](https://quantum.ibm.com/functions?id=a8a2b0b6-486a-41b5-8ea4-ada3b108d6b6). The example demonstrated in this tutorial is an optimization problem designed to find the ground-state energy of a random-bond 156-qubit Ising model possessing cubic terms. The Optimization Solver can be used for general optimization problems that can be defined as an objective function.\n",
+    "This tutorial demonstrates how to solve a higher-order binary optimization (HOBO) problem using the [Optimization Solver, a Qiskit Function by Q-CTRL Fire Opal](/docs/guides/q-ctrl-optimization-solver). The example demonstrated in this tutorial is an optimization problem designed to find the ground-state energy of a random-bond 156-qubit Ising model possessing cubic terms. The Optimization Solver can be used for general optimization problems that can be defined as an objective function.\n",
     "\n",
-    "The Optimization fully automates the hardware-aware implementation steps of solving optimization problems on quantum hardware, and by leveraging [Performance Management](https://quantum.ibm.com/functions?id=c750648c-ba44-4137-8c34-4140a3aaa7a9) for the quantum execution, it achieves accurate solutions at utility scale. For a detailed summary of the full Optimization Solver workflow and benchmarking results, refer to [the published manuscript](https://arxiv.org/abs/2406.01743).\n",
+    "The Optimization fully automates the hardware-aware implementation steps of solving optimization problems on quantum hardware, and by leveraging [Performance Management](/docs/guides/q-ctrl-performance-management) for the quantum execution, it achieves accurate solutions at utility scale. For a detailed summary of the full Optimization Solver workflow and benchmarking results, refer to [the published manuscript](https://arxiv.org/abs/2406.01743).\n",
     "\n",
     "This tutorial walks through the following steps:\n",
     "\n",
@@ -53,7 +53,7 @@
     "* Qiskit Functions (`pip install qiskit-ibm-catalog`)\n",
     "* SymPy (`pip install sympy`)\n",
     "\n",
-    "You will also need to get access to the Optimization Solver function. [Fill out the form](https://quantum.ibm.com/functions?id=a8a2b0b6-486a-41b5-8ea4-ada3b108d6b6) to request access."
+    "You will also need to get access to the Optimization Solver function. [Fill out the form](https://quantum.cloud.ibm.com/functions?id=q-ctrl-optimization-solver) to request access."
    ]
   },
   {
@@ -92,7 +92,7 @@
    "id": "df157bba",
    "metadata": {},
    "source": [
-    "Define your [IBM Quantum™ Platform](http://quantum.ibm.com/) credentials, which will be used throughout the tutorial to authenticate to Qiskit Runtime and Qiskit Functions."
+    "Define your [IBM Quantum&reg; Platform](https://quantum.cloud.ibm.com/) credentials, which will be used throughout the tutorial to authenticate to Qiskit Runtime and Qiskit Functions."
    ]
   },
   {
