--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
-    "Authenticate using your [API key](http://quantum.ibm.com/) and select the Qiskit Function as follows:\n",
+    "Authenticate using your [API key](https://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "Authenticate using your [API key](http://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:\n",
