--- a/docs/guides/primitives-rest-api.ipynb
+++ b/docs/guides/primitives-rest-api.ipynb
@@ -89,7 +89,7 @@
     "    \"group\": \"group1\",\n",
     "    \"project\": \"project1\",\n",
     "    \"params\": {\n",
-    "        \"pubs\": [ #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/migration-guides/v2-primitives\n",
+    "        \"pubs\": [ #primitive unified blocs (PUBs) containing one circuit each. c.f. https://quantum.cloud.ibm.com/docs/en/migration-guides/v2-primitives\n",
     "            [resulting_qasm, # QASM circuit\n",
     "             {\"IIZII\": 1, \"XIZZZ\": 2.3}, # Observable\n",
     "             None # parameter values\n",
