--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -67,7 +67,7 @@
     "    ```\n",
     "    pip install qiskit-ibm-catalog\n",
     "    ```\n",
-    "1. Retrieve your API key from the [IBM Quantum account page](https://quantum.ibm.com/account), and activate your Python virtual environment.  See the [installation instructions](/docs/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
+    "1. Retrieve your API key from the [IBM Quantum account page](https://quantum.cloud.ibm.com/), and activate your Python virtual environment.  See the [installation instructions](/docs/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "1. To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
@@ -110,7 +110,7 @@
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
-    "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by expiring it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API key field) to reduce risk. To initialize the service in this situation, expand the following section to view code you can use:\n",
+    "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by expiring it on the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/) (click the refresh button in the API key field) to reduce risk. To initialize the service in this situation, expand the following section to view code you can use:\n",
     "\n",
     "    <details>\n",
     "        <summary>Initialize the service in an untrusted environment</summary>\n",
@@ -149,7 +149,7 @@
     "    <Admonition type=\"caution\">\n",
     "      **Protect your API key!** Never include your key in source code, Python script, or notebook file. When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the key and provide instructions for securely setting it up.\n",
     "\n",
-    "      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by expiring it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API key field) to reduce risk.\n",
+    "      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by expiring it on the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/) (click the refresh button in the API key field) to reduce risk.\n",
     "    </Admonition>\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
