--- a/docs/guides/common-parameters.ipynb
+++ b/docs/guides/common-parameters.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
-    "You can use the [`plot_error_map`](/docs/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams at https://quantum.ibm.com/services/resources.\n",
+    "You can use the [`plot_error_map`](/docs/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams at https://quantum.cloud.ibm.com/computers.\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "You can use the [`plot_error_map`](/docs/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams on the [Compute resources](https://quantum.cloud.ibm.com/computers) page.\n",
@@ -272,7 +272,7 @@
     "* `unitary_synthesis_method` (str) - The name of the unitary synthesis method to use. By default `default` is used.\n",
     "\n",
     "<Admonition>\n",
-    "  To see a list of all installed plugins for a given stage, run [`list_stage_plugins(\"stage_name\")`](https://docs.quantum.ibm.com/api/qiskit/transpiler_plugins#plugin-api). For example, if you want to see a list of all installed plugins for the routing stage, run `list_stage_plugins(routing)`.\n",
+    "  To see a list of all installed plugins for a given stage, run [`list_stage_plugins(\"stage_name\")`](/docs/api/qiskit/transpiler_plugins). For example, if you want to see a list of all installed plugins for the routing stage, run `list_stage_plugins(routing)`.\n",
     "</Admonition>\n",
     "\n",
     "## Next steps\n",
