--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "First, [request access to the function](https://forms.office.com/r/zN3hvMTqJ1).\n",
     "<LegacyContent>\n",
-    "Then, authenticate using your [IBM Quantum&reg; API key](http://quantum.ibm.com/) and select the Qiskit Function as follows:\n",
+    "Then, authenticate using your [IBM Quantum&reg; API key](https://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "Then, authenticate using your [IBM Quantum&reg; API key](http://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:\n",
