--- a/docs/guides/fair-share-scheduler.mdx
+++ b/docs/guides/fair-share-scheduler.mdx
@@ -66,7 +66,7 @@ The fair-share scheduler selects workloads to execute on a QPU in a dynamic orde
 
 A wait-time estimate is provided through IBM Quantum Platform. The computed time is the result of a scheduling simulation that predicts one possible execution pattern, given the current fair-share ordering of all the workloads waiting for that QPU and the approximate runtime of each workload. The dynamic nature of the fair-share scheduler means that this estimated time is not fixed and can vary, sometimes dramatically. This wait time is also subject to limitations inherent in estimating the execution time for Qiskit Runtime workloads. For these workloads, where an accurate estimation of time is not feasible, the maximum allowed runtime is used as a proxy. In practice, this means that the duration for a Qiskit Runtime workload can be over-estimated by up to eight hours, the maximum allowed Qiskit Runtime workload duration for Premium Plan users.
 
-Your workload's position in the queue is listed in the **Queue position** column on the [Workloads page](https://quantum.ibm.com/workloads).
+Your workload's position in the queue is listed in the **Queue position** column on the [Workloads page](https://quantum.cloud.ibm.com/workloads).
 </LegacyContent>
 ## Next steps
 
