--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "## Get started\n",
     "<LegacyContent>\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.ibm.com/), and select the Qiskit Function as follows:\n",
+    "Authenticate using your [IBM Quantum Platform API key](https://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
@@ -718,7 +718,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "\n",
-    "- Request access to [Q-CTRL Performance Management](https://quantum.ibm.com/functions?id=c750648c-ba44-4137-8c34-4140a3aaa7a9)\n",
+    "- Request access to [Q-CTRL Performance Management](https://quantum.cloud.ibm.com/functions?id=q-ctrl-performance-management)\n",
     "\n",
     "</Admonition>"
    ]
