--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "# authentication\n",
     "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/functions\n",
+    "# https://quantum.cloud.ibm.com/docs/guides/functions\n",
     "# to authenticate with your API key.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
@@ -636,7 +636,7 @@
     "## Get started\n",
     "\n",
     "<LegacyContent>\n",
-    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:\n",
+    "Authenticate using your [IBM Quantum Platform API token](https://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
@@ -1098,7 +1098,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "\n",
-    "- Request access to [Multiverse Computing's Singularity Machine Learning Classification function](https://quantum.ibm.com/functions).\n",
+    "- Request access to [Multiverse Computing's Singularity Machine Learning Classification function](https://quantum.cloud.ibm.com/functions?id=multiverse-singularity).\n",
     "\n",
     "</Admonition>"
    ]
