--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -11,7 +11,7 @@
     "Jobs are listed on the Workloads page for your quantum service channel:\n",
     "\n",
     "*   IBM Cloud&reg; channel: From the IBM Cloud console quantum [Instances page](https://cloud.ibm.com/quantum/instances), click the name of your instance, then click the Jobs tab.\n",
-    "*   IBM Quantum&reg; channel: In IBM Quantum Platform, open the [Workloads page](https://quantum.ibm.com/workloads).\n",
+    "*   IBM Quantum&reg; channel: In IBM Quantum Platform, open the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "View a list of your workloads on the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
